--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+h<!DOCTYPE html>
 <html>
 <head>
     <title>Actions Gifs</title>
@@ -13,7 +13,7 @@
 <body>
     <div class="jumbotron">
         <div class="container">
-            <h1>Actions Search</h1>
+            <h1>Search Gifs~!</h1>
         </div>
     </div>
     <div id="gifButtonsView" class="container">
